--- a/apps/web/display/main.css
+++ b/apps/web/display/main.css
@@ -19,6 +19,21 @@ body {
 	height: 300px;
 }
 
+.view .half_width {
+	position: relative;
+	float: left;
+	width: 50%;
+}
+
+.view .full_width {
+	float: left;
+	width: 100%;
+}
+
+#startscreen.view .qr_wrap {
+	height: 300px;
+}
+
 .message {
 	margin-top: 120px;
 	text-align: center;
